# galmail

./: .env.example  .gitignore  .sops.yaml  Cargo.toml  LICENSE  README.md  SECURITY.md  flake.nix  package.json  pnpm-lock.yaml  sops-age.test.ts  tsconfig.base.json
.github/workflows/: ci.yml  ios-testflight.yml  macos-release.yml
apps/web/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/web/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json  tauri.ios.conf.json  tauri.macos.conf.json
apps/web/src-tauri/capabilities/: default.json  mobile.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/icons/icon.iconset/: diana.k@example.org  ivan.p@example.net  walt.e@example.net  wendy.h@example.net
apps/web/src-tauri/scripts/: macos-dev-runner.sh
apps/web/src-tauri/src/: gmail_oauth.rs  ios_oauth.rs  lib.rs  main.rs  microsoft_oauth.rs  oauth_callback_page.rs  release_support.rs  secure_storage.rs  unsubscribe.rs
benches/: README.md
crates/galmail-core/: Cargo.toml
crates/galmail-core/src/: crypto.rs  database.rs  keys.rs  lib.rs
crates/galmail-wasm/: Cargo.toml
crates/galmail-wasm/src/: lib.rs
deploy/homelab/: .env.example  Caddyfile.example  README.md  docker-compose.yml
docs/: architecture-decisions.md  crypto-review-checklist.md  deployment.md  diagnostics-policy.md  full-client-roadmap.md  incident-response.md  oauth-architecture.md  oauth-review-prep.md  performance-budgets.md  platform-expansion.md  privacy-model.md  privacy-policy.md  product-spec.md  public-web-security-evaluation.md  release-candidate-checklist.md  release-policy.md  retention-deletion-policy.md  schema-versioning.md  security-requirements.md  status.md  tauri-risk-prototypes.md  threat-model.md
fixtures/mailboxes/: small.json
fixtures/mime/: malicious-multipart.eml
fixtures/oauth/: README.md
scripts/: assert-release-monotonic.ts  check-budgets.ts  check-secrets-encrypted.ts  ci-decrypt-sops-env.ts  create-updater-manifest.ts  dependency-policy.ts  edit-dev-secrets.ts  ensure-frontend-dist.ts  generate-fixtures.ts  import-google-oauth-json.ts  ios-archive-testflight.ts  lint-no-emdash.test.ts  lint-no-emdash.ts  migrate-dev-secrets-to-yaml.ts  platform-expansion.test.ts  prepare-tauri-release-config.ts  release-config.test.ts  restore-tty.ts  run-web.ts  secrets-yaml.test.ts  secrets-yaml.ts  security-policy.test.ts  sync-ios-web-assets.ts  with-sops.test.ts  with-sops.ts
secrets/: dev.example.json  dev.example.yaml  dev.json  google-desktop-oauth.json  tauri-updater.pub  tauri-updater.yaml
secrets/ci/: apple.example.yaml  apple.yaml  vite.example.yaml  vite.yaml
services/blind-relay/: .dev.vars.example  package.json  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc
services/homelab-api/: Dockerfile  README.md  package.json  tsconfig.json
services/opt-in-processor/: .dev.vars.example  package.json  (+4 more)
(+60 files in other folders)
