[package]
name = "galmail-core"
version = "0.1.0"
edition = "2021"
description = "GalMail native core — sync, storage, MIME, search, outbox, crypto"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"

[dev-dependencies]
proptest = "1"
