[package]
name = "galmail-core"
version = "0.1.0"
edition = "2021"
description = "GalMail native core — sync, storage, MIME, search, outbox, crypto"
license = "MIT"

[features]
default = ["native-storage"]
native-storage = ["dep:rusqlite"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
parking_lot = "0.12"
chacha20poly1305 = "0.11.0"
hkdf = "0.13.0"
sha2 = "0.11.0"
zeroize = "1.9.0"
rusqlite = { version = "0.39.0", features = ["bundled-sqlcipher-vendored-openssl", "backup"], optional = true }
getrandom = { version = "0.4.3", features = ["wasm_js"] }

[dev-dependencies]
proptest = "1"
tempfile = "3.27.0"
