[package]
name = "galmail-tauri"
version = "0.1.0"
description = "GalMail Tauri 2 shell (macOS / iOS)"
authors = ["GalMail contributors"]
edition = "2021"
# Explicit bin name so `tauri:dev` Dock / menu bar show "GalMail" (not "galmail-tauri").
autobins = false

[lib]
name = "galmail_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "GalMail"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
galmail-core = { path = "../../../crates/galmail-core" }
getrandom = "0.4.3"
zeroize = "1.9.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1.52.3", features = ["net", "time", "io-util", "sync"] }
base64 = "0.22.1"
sha2 = "0.11.0"
url = "2.5.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
security-framework = "3.7.0"
security-framework-sys = "2"
core-foundation = "0.10"

[dev-dependencies]
tempfile = "3.27.0"
